--- a/nginx/etc/nginx.conf
+++ b/nginx/etc/nginx.conf
@@ -1,10 +1,8 @@
-
 user  nginx;
 worker_processes  1;
 
-error_log  /var/log/nginx/error.log warn;
+error_log  /dev/stderr;
 pid        /var/run/nginx.pid;
-
 
 events {
     worker_connections  1024;
@@ -19,7 +17,7 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+    access_log  /dev/stdout;
 
     sendfile        on;
     #tcp_nopush     on;
