Basic auth working

--- a/nginx/etc/conf.d/webdav.conf
+++ b/nginx/etc/conf.d/webdav.conf
@@ -10,15 +10,14 @@ server {
     }
 
     location /webdav {
-        # auth_basic              realm_name;
-        # auth_basic_user_file    /etc/nginx/.credentials.list;
+        auth_basic "Restricted access webdav";
+        auth_basic_user_file    /etc/nginx/.credentials.list;
 
         autoindex on;
         dav_methods     PUT DELETE MKCOL COPY MOVE;
-        # Need external module to enable this
-        # dav_ext_methods PROPFIND OPTIONS;
+        dav_ext_methods PROPFIND OPTIONS;
         create_full_put_path  on;
-        dav_access      user:rw group:rw all:rw;
+        dav_access      user:rw group:rw;
 
         root /var/www;
         client_body_temp_path   /var/www/tmp;
