--- a/nginx/etc/nginx.conf
+++ b/nginx/etc/nginx.conf
@@ -3,6 +3,7 @@ worker_processes  1;
 
 error_log  /dev/stderr;
 pid        /var/run/nginx.pid;
+include /etc/nginx/modules-enabled/*.conf;
 
 events {
     worker_connections  1024;
