Updated for SSL

--- a/nginx/etc/conf.d/webdav.conf
+++ b/nginx/etc/conf.d/webdav.conf
@@ -1,8 +1,14 @@
 server {
     listen 80;
 
-    # server_name webdav.nucoder.io;
-    server_name localhost;
+    server_name _;
+    return 301 https://$host$request_uri;
+}
+server {
+    listen 443 ssl deferred;
+    server_name access.nucoder.io;
+    ssl_certificate /etc/letsencrypt/live/access.nucoder.io/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/access.nucoder.io/privkey.pem;
 
     location /webdav {
         auth_basic "Restricted access webdav";
