--- a/nginx/etc/conf.d/webdav.conf
+++ b/nginx/etc/conf.d/webdav.conf
@@ -6,7 +6,7 @@ server {
 }
 server {
     listen 443 ssl deferred;
-    server_name access.nucoder.io;
+    server_name joplin.nucoder.io;
     ssl_certificate /etc/letsencrypt/live/access.nucoder.io/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/access.nucoder.io/privkey.pem;
 
